<resources>
    <string name="app_name">MoneyWise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tableau De Bord</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Profil">Profil</string>
    <string name="menu_Dashbord">Dashbord</string>
    <string name="menu_Projet">Projet</string>
    <string name="menu_Historique">Historique</string>
    <string name="menu_Emprunt">Emprunt</string>
    <string name="menu_Acquittement">Acquittement</string>
    <string name="menu_Transaction">Transaction</string>
    <string name="menu_Login">Login</string>
    <string name="menu_Signing">Signing</string>

    <string name="error_name_required">Le nom est requis</string>
    <string name="error_firstname_required">Le prénom est requis</string>
    <string name="error_email_required">L\'email est requis</string>
    <string name="error_password_required">Le mot de passe est requis</string>
    <string name="error_password_mismatch">Les mots de passe ne correspondent pas</string>

    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>

</resources>