<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_Profil" />
        <item
            android:id="@+id/nav_projet"
            android:icon="@drawable/ic_projet"
            android:title="@string/menu_Projet" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_historique"
            android:title="@string/menu_Historique" />
        <item
            android:id="@+id/nav_emprunt"
            android:icon="@drawable/ic_emprut"
            android:title="@string/menu_Emprunt" />
        <item
            android:id="@+id/nav_acquittement"
            android:icon="@drawable/ic_acquittement"
            android:title="@string/menu_Acquittement" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_transaction"
            android:title="@string/menu_Transaction" />
    </group>
</menu>